<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_locals"
            android:icon="@drawable/ic_menu_locals"
            android:title="@string/menu_locals" />
        <item
            android:id="@+id/nav_trends"
            android:icon="@drawable/ic_menu_trends"
            android:title="@string/menu_trends" />

    </group>

    <item android:title="@string/nav_header_title">
        <menu>

            <item
                android:id="@+id/nav_login"
                android:title="@string/menu_login" />

            <item
                android:id="@+id/nav_signup"
                android:title="@string/menu_signup" />
            <item
                android:id="@+id/nav_myprofile"
                android:title="@string/menu_profile" />
            <item
                android:id="@+id/nav_logout"
                android:title="@string/menu_logout" />
        </menu>
    </item>

</menu>
